--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-cayman
 title: [Coded Language Timeline]
 description: [A walk through how people have obsfucated their language throughout history]
+is_project_page: ["true"]
